--- a/views/check.hbs
+++ b/views/check.hbs
@@ -47,25 +47,25 @@
       <div class="form-group row">
         <label for="name" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" name="name" id="name" placeholder="Please input the recipient's name">
+          <input type="text" class="form-control" name="name" value="{{user.name}}" id="name" placeholder="Please input the recipient's name">
         </div>
       </div>
       <div class="form-group row">
         <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" name="email" id="email" placeholder="Please input the email">
+          <input type="email" class="form-control" name="email" value="{{user.email}}" id="email" placeholder="Please input the email">
         </div>
       </div>
       <div class="form-group row">
         <label for="phone" class="col-sm-2 col-form-label">Phone</label>
         <div class="col-sm-10">
-          <input type="tel" class="form-control" name="phone" id="phone" placeholder="Please input the phone number">
+          <input type="tel" class="form-control" name="phone" value="{{user.phone}}" id="phone" placeholder="Please input the phone number">
         </div>
       </div>
       <div class="form-group row">
         <label for="address" class="col-sm-2 col-form-label">Address</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" name="address" id="address" placeholder="Please input the shipping address">
+          <input type="text" class="form-control" name="address" value="{{user.address}}" id="address" placeholder="Please input the shipping address">
         </div>
       </div>
     </li>
