--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -3,11 +3,11 @@
   <form class="form-logIn" action="/user/login" method="POST">
     <div class="form-group">
       <label for="email">Email address</label>
-      <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
+      <input type="email" class="form-control" id="email" name="email" value="tony@example.com" placeholder="Enter email">
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+      <input type="password" class="form-control" id="password" name="password" value="a123456" placeholder="Password">
     </div>
     <div class="form-group">
       No Account?
